# life-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: sdk_demo.py
life_ai/: __init__.py  agent.py  llm.py  main.py  persistence.py  prompts.py  sdk.py  simulator.py  web.py  world.py
saves/: pirates-test.json  pirates.json
static/: style.css
templates/: index.html
