[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "life-ai"
version = "0.1.0"
description = "Turn any idea into a living AI world in one command."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "python-dotenv>=1",
]

[project.scripts]
life-ai = "life_ai.main:run"